--- a/market/templates/core/base.html
+++ b/market/templates/core/base.html
@@ -7,18 +7,23 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
    <script src="https://cdn.tailwindcss.com"></script>
 
-    <title>{% block title %}{% endblock %} | Puddle</title>
+    <title>{% block title %}{% endblock %} | Market</title>
 </head>
 <body>
     <nav class="px-6 py-6 flex justify-between items-center border-b border-gray-300">
         <a href="/" class="text-xl font-semibold"> Market</a>
         <div class="space-x-6">
-            <a href="#" class="text-xl font-semibold hover:text-gray-500">New item</a>
-            <a href="#" class="text-xl font-semibold hover:text-gray-500">Browse</a>
-            
-            <a href="#" class="px-6 py-3 text-lg font-semibold bg-teal-500 text-white rounded-xl hover:bg-teal-700">Sign in</a>
-            <a href="#" class="px-6 py-3 text-lg font-semibold bg-gray-500 text-white rounded-xl hover:bg-gray-700">Log in</a>
-
+            <a href="{% url 'add_item' %}" class="text-xl font-semibold hover:text-gray-500">New item</a>
+            <a href="{% url 'browse' %}" class="text-xl font-semibold hover:text-gray-500">Browse</a>
+           
+            {% if request.user.is_authenticated %}
+                <a href="#" class="px-6 py-3 text-lg font-semibold bg-teal-500 text-white rounded-xl hover:bg-teal-700">Inbox</a>
+                <a href="{% url 'dashboard' %}" class="px-6 py-3 text-lg font-semibold bg-gray-500 text-white rounded-xl hover:bg-gray-700">Dashboard</a>
+{#                <a href="{% url 'logout' %}" class="px-6 py-3 text-lg font-semibold bg-teal-500 text-white rounded-xl hover:bg-teal-700">Log out</a>#}
+                {% else %}
+            <a href="{% url 'signup' %}" class="px-6 py-3 text-lg font-semibold bg-teal-500 text-white rounded-xl hover:bg-teal-700">Sign in</a>
+            <a href="{% url 'login' %}" class="px-6 py-3 text-lg font-semibold bg-gray-500 text-white rounded-xl hover:bg-gray-700">Log in</a>
+            {% endif %}
         </div>
     </nav>
     
