--- a/market/templates/core/base.html
+++ b/market/templates/core/base.html
@@ -17,7 +17,7 @@
             <a href="{% url 'browse' %}" class="text-xl font-semibold hover:text-gray-500">Browse</a>
            
             {% if request.user.is_authenticated %}
-                <a href="#" class="px-6 py-3 text-lg font-semibold bg-teal-500 text-white rounded-xl hover:bg-teal-700">Inbox</a>
+                <a href="{% url 'inbox' %}" class="px-6 py-3 text-lg font-semibold bg-teal-500 text-white rounded-xl hover:bg-teal-700">Inbox</a>
                 <a href="{% url 'dashboard' %}" class="px-6 py-3 text-lg font-semibold bg-gray-500 text-white rounded-xl hover:bg-gray-700">Dashboard</a>
                 <a href="{% url 'logout' %}" class="px-6 py-3 text-lg font-semibold bg-teal-500 text-white rounded-xl hover:bg-teal-700">Log out</a>
 {#                <form action="{% url 'logout' %}" method="post" class="inline">#}
