--- a/market/templates/item/detail.html
+++ b/market/templates/item/detail.html
@@ -27,7 +27,7 @@
                 <a href="{% url 'delete_item' pk=item.pk %}" class="inline-block px-6 py-3 text-lg font-semibold bg-red-500 text-white rounded-xl hover:bg-red-700">Delete</a>
                 
             {% else %}
-            <a href=""
+            <a href="{% url 'new_conversation' pk=item.pk %}"
                class="inline-block mt-6 px6 py-3 text-lg font-semibold bg-teal-500 text-white rounded-xl hover:bg-teal-700">Contact seller
             </a>
             </div>
